# IronCoder

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml  requirements.txt  ws_server.py
src/: action_handler.py  audio_handler.py  clutch_detector.py  config_manager.py  gemini_gesture_detector.py  gesture_recognizer.py  hand_tracker.py  hybrid_gesture_detector.py
src/utils/: settings_ui.py  theme.py  visual_feedback.py  window_manager.py
tauri-app/: package-lock.json  package.json
tauri-app/src/: App.tsx  index.css
tauri-app/src-tauri/: tauri.conf.json
tauri-app/src/components/: ActionFeedback.tsx  ClutchBorder.tsx  GestureHints.tsx  RecordingIndicator.tsx  SettingsPanel.tsx  StatusPill.tsx  VideoFeed.tsx
tauri-app/src/hooks/: useWebSocket.ts
tauri-app/src/store/: useAppStore.ts
tauri-app/src/types/: index.ts
